Fixed landing page formatting & added small font to table on mobile.

--- a/client/src/pages/home/landing.css
+++ b/client/src/pages/home/landing.css
@@ -25,7 +25,6 @@
 
     background-size: auto 150%;
     height: 200vh;
-
 }
 
 .landing__center {
@@ -34,18 +33,17 @@
     justify-content: center;
     height: 100vh;
     flex-direction: column;
+    text-align: center;
     gap: 1rem;
-}
-
-.landing__bottom {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    flex-direction: column;
-    gap: 1rem;
+    padding: 1rem;
 }
 
 .game__button {
     min-width: 100px;
+}
+
+@media screen and (max-width: 585px) {
+    .landing__center {
+        padding: .5rem;
+    }
 }
